@@ -14,10 +14,12 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import org.geotools.api.data.SimpleFeatureStore;
+import org.geotools.api.referencing.FactoryException;
+import org.geotools.api.referencing.operation.TransformException;
 import org.geotools.data.DefaultTransaction;
 import org.geotools.data.shapefile.ShapefileDataStore;
 import org.geotools.data.shapefile.ShapefileDataStoreFactory;
-import org.geotools.data.simple.SimpleFeatureStore;
 import org.geotools.feature.DefaultFeatureCollection;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
@@ -29,8 +31,6 @@ import org.junit.jupiter.api.condition.OS;
 import org.junit.jupiter.api.io.TempDir;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.Point;
-import org.opengis.referencing.FactoryException;
-import org.opengis.referencing.operation.TransformException;
 
 class ShapefileReaderTest {
   @TempDir
@@ -94,9 +94,9 @@ class ShapefileReaderTest {
       assertEquals(1, reader.getFeatureCount());
       List<SimpleFeature> features = new ArrayList<>();
       reader.readFeatures(features::add);
-      assertEquals(10.5113, features.get(0).latLonGeometry().getCentroid().getX(), 1e-4);
-      assertEquals(0, features.get(0).latLonGeometry().getCentroid().getY(), 1e-4);
-      assertEquals(3, features.get(0).getTag("value"));
+      assertEquals(10.5113, features.getFirst().latLonGeometry().getCentroid().getX(), 1e-4);
+      assertEquals(0, features.getFirst().latLonGeometry().getCentroid().getY(), 1e-4);
+      assertEquals(3, features.getFirst().getTag("value"));
     }
   }
 
